app/bt.css
/* ... */
[data-dense="DENSE"] {
    --btNoteLineClamp: 1;
    --btRowHeight: 20px;
    --btRowButtonMarginTop: -5px;
    --btIndenterTopOffset: -4px;
    --btFaviconPadding: 1px;
    --btTabgroupPadding: 3px 7px 3px 7px !important;

    --btWenkBottom: 3px;
    --btWenkPadding: 0.1rem 0.5rem 0.1rem 0.5rem;
    --btIndentStepSize: 20px;
}

[data-size="LARGE"] {
    --btTopicFontSize: 16px;
    --btTopicLineHeight: 18px;

    --btPageFontSize: 14px;
    --btPageLineHeight: 16px;

    --btNoteFontSize: 14px;
    --btNoteLineHeight: 16px;
    --btRowButtonMarginTop: -1px;
    --btRowHeight: 35px;
}
[data-dense="DENSE"][data-size="LARGE"] {
    --btRowHeight: 24px;
    --btIndenterTopOffset: -4px;
}
    
a {
    color: var(--btLinkColor);
}
span.indenter a, #nagText a {
    color: var(--btIndenterLinkColor);
}
a:link {
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
a:hover.wenk--bottom {
  text-decoration: none;
}

html {
    background: var(--btEmptyBackground);
}
body {
    overflow-x: clip;
    margin-left: 0px;
    margin-right: 0px;
}

/*
 * Header Bar 
 */

#controlsHeader {
    z-index: 3;
}

.topBanner {
    width: 100%;
    height: 54px;
    left: 0px;
    top: 0px;
    background: var(--btHeaderBackground);
    color: var(--btColor);
    z-index: 2;
}
#topBar {
    position: fixed;
}

#brain {
    margin-left: 10px;
    margin-top: 8px;
}
#topBarRight {
    position: absolute;
    width: 80px;
    height: 46px;
    right: 0px;
    top: 0px;
    font-size: 11px;
}
#topBarRight div {
    cursor: pointer;
    font-family: var(--btFont);
}
#topBarRight img {
    position: relative;
    top: 3px;
    height: 14px;
    width: 14px;
}
#settingsButton {
    padding-right: 15px;
    padding-top: 6px;
    padding-bottom: 4px;
    padding-left: 5px;
}
#settingsButton.open {    
    background: rgba(42, 63, 62, 0.9);
    color:  rgba(255, 255, 255, 0.7);
}
#actionsButton {
    padding-right: 15px;
    padding-left: 2px;
    padding-bottom: 10px;
    padding-left: 5px;
}
#actionsButton.open {    
    background: rgba(42, 63, 62, 0.9);
    color:  rgba(255, 255, 255, 0.7);
}
#footerHelp.open {    
    background: rgba(42, 63, 62, 0.9);
    color:  rgba(255, 255, 255, 0.7);
}

/* Set version of icon based on theme, light icon for dark theme */
#settingsIcon.DARK {
    content:url("resources/settingsIconLight.png");
}
#settingsIcon.LIGHT {
    content:url("resources/settingsIcon.png");
}
#actionsIcon.DARK {
    content:url("resources/actionsIconLight.png");
}
#actionsIcon.LIGHT {
    content:url("resources/actionsIcon.png");
}

#search_entry {
    position: absolute;
    left: 75px;
    top: 12px;
    border: none;
    width: calc((100% - 190px) * 0.9);
    color: var(--btInputForeground);
    background: var(--btInputBackground);
    border-radius: 12px;
    box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.5);
    margin-left: 5px;
    padding-left: 15px;
    height: 25px;
}

#searchCancelButton {
    position: absolute;
    cursor: pointer;
    top: 17px;
    left: 62px;
}
#searchUpBtn {
    position: absolute;
    cursor: pointer;
    top: 12px;
    left: calc((100% - 155px) * 0.9 + 72px);
}
#searchDownBtn {
    position: absolute;
    cursor: pointer;
    top: 25px;
    left: calc((100% - 155px) * 0.9 + 72px);
}
.searchButton {
    display: none;
}
#todoFilter, #searchFilter{
    position: absolute;
    top: 12px;
    left: calc((100% - 120px) * 0.9);
    cursor: pointer;
    scale: 1.15;
}
#searchFilter {
    top: 14px;
}
    
.hint {
    /* alex */
    font-family: var(--btFont);
    font-style: var(--btNoteFontWeight);
    font-weight: var(--btNoteFontWeight);
    font-size: var(--btNoteFontSize);
    line-height: var(--btPageLineHeight);
    color: var(--btHintColor);
    z-index: 3;
}
.searchHint {
    position: absolute;
    top: 18px;
    left: 90px;
}
.hintText {
    position: relative;
    top: -4px;
}
#newTopLevelTopic {
    position: fixed;
    top: 54px;
    width: 100%;
    height: 28px;
    text-align: center;
    background: #2A3F3E;
    color: #85E20E;
    cursor: pointer;
    font-family: var(--btFont);
    font-size: var(--btTopicFontSize);
    z-index: 2;
}
#newTopic {
    position: relative; 
    top: 1px;
}
#newTopicNameHint {
    position: absolute;
    left: 10px;
    top: 4px;
}
#nameHint {
    position: relative;
    top: 3px;
    left: -20px;
}
#resizer {
    cursor: col-resize;
    position: absolute;
    top: 15px;
    left: calc(50% - 13px);  /* Center accounting for font width*/
    font-size: 11px;
    opacity: 50%;
}

/* style when input is active */
:focus-visible, button:not([disabled]):hover, input[type="text"]:not([disabled]):hover, textarea:not([disabled]):hover, .introNavButton:hover, .introButton:hover {
    outline-width: 1px;
    outline-color: var(--btButtonHighlight);
    outline-style: groove;
}
button:not([disabled]):hover, textarea:not([disabled]):not(:focus):hover, input[type="text"]:not([disabled]):not(:focus):hover {
    cursor: pointer;
}
textarea:focus, input[type="text"]:focus {
    cursor:text;
}
.highlight {
    background-color: #85E20E;
}
.extendedHighlight {
    background-color: #85E20EAA;
}
.failed {
    background-color: #E59A98 !important;
}

#trialExpiredWarning {
    position: fixed;
    top: 79px;
    border: solid;
    border-width: 1px;
    border-color: grey;
    z-index: 1;
    display: none;
}
#trialExpiredWarning .panelClose {
    margin-top: 7px;
    right: 10px;
}
#nagHeading {
    background-color: #CA4141;
    height: 40px;
    color: white;
    font-family: var(--btFont);
    font-size: var(--btTopicFontSize);
    text-align: center;
    line-height: 40px;
}

#nagContent {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px;
    background-color: #E2E2E2;
}

#BTTrialBuddy {
    height: 50px;
    margin-right: 20px;
}

#nagText {
    flex-grow: 1;
    font-family: var(--btFont);
    font-size: 12px;
    padding-right: 10px;
    color: #8E9EA0;
}
/* ... */

